@@ -1357,7 +1357,7 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
     private boolean compareVariables(Map<String, BVarSymbol> varsInPreviousMatchPattern,
                                      BLangMatchPattern matchPattern) {
         Map<String, BVarSymbol> varsInCurrentMatchPattern = matchPattern.declaredVars;
-        if (varsInPreviousMatchPattern.size() == 0) {
+        if (varsInPreviousMatchPattern.isEmpty()) {
             varsInPreviousMatchPattern.putAll(varsInCurrentMatchPattern);
             return true;
         }
@@ -1908,7 +1908,7 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
         if (varRef.cause != null) {
             varRefs.add(varRef.cause);
         }
-        varRefs.addAll(varRef.detail.stream().map(e -> e.expr).collect(Collectors.toList()));
+        varRefs.addAll(varRef.detail.stream().map(e -> e.expr).toList());
         if (varRef.restVar != null) {
             varRefs.add(varRef.restVar);
         }
@@ -2401,7 +2401,7 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
                     inclusiveTypeSpreadField = spreadOpField;
 
                     if (recordLiteralFields.size() > 1) {
-                        if (names.size() > 0) {
+                        if (!names.isEmpty()) {
                             this.dlog.error(spreadOpExpr.pos,
                                             DiagnosticErrorCode.SPREAD_FIELD_MAY_DULPICATE_ALREADY_SPECIFIED_KEYS,
                                             spreadOpExpr);
@@ -2907,7 +2907,7 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
                                                               .filter(bLangNode -> bLangNode.workerIdentifier.equals
                                                                       (flushWrkIdentifier))
                                                               .collect(Collectors.toList());
-            if (sendsToGivenWrkr.size() == 0) {
+            if (sendsToGivenWrkr.isEmpty()) {
                 this.dlog.error(workerFlushExpr.pos, DiagnosticErrorCode.INVALID_WORKER_FLUSH_FOR_WORKER,
                                 workerFlushExpr.workerSymbol, currentWrkerAction.currentWorkerId());
                 return;
@@ -2915,7 +2915,7 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
                 sendStmts = sendsToGivenWrkr;
             }
         } else {
-            if (sendStmts.size() == 0) {
+            if (sendStmts.isEmpty()) {
                 this.dlog.error(workerFlushExpr.pos, DiagnosticErrorCode.INVALID_WORKER_FLUSH,
                                 currentWrkerAction.currentWorkerId());
                 return;
